src/test/compile-fail/trait-test.rs
trait foo { fn foo(); }

impl uint: int { fn foo() {} } //~ ERROR trait

fn main() {}
